--- a/templates/components/_release.html.j2
+++ b/templates/components/_release.html.j2
@@ -4,7 +4,7 @@
 <div class="section-inner">
   <div class="call-to-action">
     Join us for the
-    <a href="https://www.facebook.com/events/786303171446670/">release party</a>!
+    <a href="https://www.facebook.com/events/786303171446670/">release party</a>:
   </div>
 
   <p class="presenters">
@@ -38,7 +38,7 @@
   </ul>
 
   <a href="https://www.dropbox.com/sh/hernur1iocol84n/AADgWeHZLaCL0YuRA5MP6mMXa?dl=0" class="press-kit">
-    Get the <b>Press Kit</b>!
+    Get the <b>Press Kit</b> »
   </a>
 </div>
 </article>
