--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
   <meta property="og:site_name" content="{{ config.title }}"/>
   <meta property="og:url" content="{{ config.canonical_url }}" />
   <meta property="og:description" content="{{ config.longdesc }}" />
-  <meta property="og:image" content="{{ config.canonical_url }}static/images/title.jpg" />
+  <meta property="og:image" content="{{ config.canonical_url }}static/images/{{ config.fb_image }}" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="675" />
 
