Add scale shift to svg animation

--- a/content/static/css/screen.css
+++ b/content/static/css/screen.css
@@ -438,93 +438,93 @@ h1 {
 
 @-webkit-keyframes shake {
   0%, 5%, 42%, 48%, 100% {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0); }
+    -webkit-transform: translate3d(0, 0, 0) scale(1);
+    transform: translate3d(0, 0, 0) scale(1); }
 
   10% {
-    -webkit-transform: translate3d(-1px, -3px, 0);
-    transform: translate3d(-1px, -3px, 0); }
+    -webkit-transform: translate3d(-1px, -3px, 0) scale(1.006);
+    transform: translate3d(-1px, -3px, 0) scale(1.006); }
 
   20% {
-    -webkit-transform: translate3d(-5px, 0, 0);
-    transform: translate3d(-5px, 0, 0); }
+    -webkit-transform: translate3d(-5px, 0, 0) scale(1);
+    transform: translate3d(-5px, 0, 0) scale(1); }
 
   30% {
-    -webkit-transform: translate3d(0, 3px, 0);
-    transform: translate3d(0, 3px, 0); }
+    -webkit-transform: translate3d(0, 3px, 0) scale(.994);
+    transform: translate3d(0, 3px, 0) scale(.994); }
 
   40% {
-    -webkit-transform: translate3d(1px, -1px, 0);
-    transform: translate3d(1px, -1px, 0); }
+    -webkit-transform: translate3d(1px, -1px, 0) scale(.994);
+    transform: translate3d(1px, -1px, 0) scale(.994); }
 
   50% {
-    -webkit-transform: translate3d(-1px, 3px, 0);
-    transform: translate3d(-1px, 3px, 0); }
+    -webkit-transform: translate3d(-1px, 3px, 0) scale(1);
+    transform: translate3d(-1px, 3px, 0) scale(1); }
 
   60% {
-    -webkit-transform: translate3d(-5px, 1px, 0);
-    transform: translate3d(-5px, 1px, 0); }
+    -webkit-transform: translate3d(-5px, 1px, 0) scale(1.006);
+    transform: translate3d(-5px, 1px, 0) scale(1.006); }
 
   70% {
-    -webkit-transform: translate3d(3px, 1px, 0);
-    transform: translate3d(3px, 1px, 0); }
+    -webkit-transform: translate3d(3px, 1px, 0) scale(1.01);
+    transform: translate3d(3px, 1px, 0) scale(1.01); }
 
   80% {
-    -webkit-transform: translate3d(-1px, -1px, 0);
-    transform: translate3d(-1px, -1px, 0); }
+    -webkit-transform: translate3d(-1px, -1px, 0) scale(1.01);
+    transform: translate3d(-1px, -1px, 0) scale(1.01); }
 
   90% {
-    -webkit-transform: translate3d(3px, 3px, 0);
-    transform: translate3d(3px, 3px, 0); }
+    -webkit-transform: translate3d(3px, 3px, 0) scale(1);
+    transform: translate3d(3px, 3px, 0) scale(1); }
 
   100% {
-    -webkit-transform: translate3d(1px, -3px, 0);
-    transform: translate3d(1px, -3px, 0); } }
+    -webkit-transform: translate3d(1px, -3px, 0) scale(1);
+    transform: translate3d(1px, -3px, 0) scale(1); } }
 
 @keyframes shake {
   0%, 5%, 42%, 48%, 100% {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0); }
+    -webkit-transform: translate3d(0, 0, 0) scale(1);
+    transform: translate3d(0, 0, 0) scale(1); }
 
   10% {
-    -webkit-transform: translate3d(-1px, -3px, 0);
-    transform: translate3d(-1px, -3px, 0); }
+    -webkit-transform: translate3d(-1px, -3px, 0) scale(1.006);
+    transform: translate3d(-1px, -3px, 0) scale(1.006); }
 
   20% {
-    -webkit-transform: translate3d(-5px, 0, 0);
-    transform: translate3d(-5px, 0, 0); }
+    -webkit-transform: translate3d(-5px, 0, 0) scale(1);
+    transform: translate3d(-5px, 0, 0) scale(1); }
 
   30% {
-    -webkit-transform: translate3d(0, 3px, 0);
-    transform: translate3d(0, 3px, 0); }
+    -webkit-transform: translate3d(0, 3px, 0) scale(.994);
+    transform: translate3d(0, 3px, 0) scale(.994); }
 
   40% {
-    -webkit-transform: translate3d(1px, -1px, 0);
-    transform: translate3d(1px, -1px, 0); }
+    -webkit-transform: translate3d(1px, -1px, 0) scale(.994);
+    transform: translate3d(1px, -1px, 0) scale(.994); }
 
   50% {
-    -webkit-transform: translate3d(-1px, 3px, 0);
-    transform: translate3d(-1px, 3px, 0); }
+    -webkit-transform: translate3d(-1px, 3px, 0) scale(1);
+    transform: translate3d(-1px, 3px, 0) scale(1); }
 
   60% {
-    -webkit-transform: translate3d(-5px, 1px, 0);
-    transform: translate3d(-5px, 1px, 0); }
+    -webkit-transform: translate3d(-5px, 1px, 0) scale(1.006);
+    transform: translate3d(-5px, 1px, 0) scale(1.006); }
 
   70% {
-    -webkit-transform: translate3d(3px, 1px, 0);
-    transform: translate3d(3px, 1px, 0); }
+    -webkit-transform: translate3d(3px, 1px, 0) scale(1.01);
+    transform: translate3d(3px, 1px, 0) scale(1.01); }
 
   80% {
-    -webkit-transform: translate3d(-1px, -1px, 0);
-    transform: translate3d(-1px, -1px, 0); }
+    -webkit-transform: translate3d(-1px, -1px, 0) scale(1.01);
+    transform: translate3d(-1px, -1px, 0) scale(1.01); }
 
   90% {
-    -webkit-transform: translate3d(3px, 3px, 0);
-    transform: translate3d(3px, 3px, 0); }
+    -webkit-transform: translate3d(3px, 3px, 0) scale(1);
+    transform: translate3d(3px, 3px, 0) scale(1); }
 
   100% {
-    -webkit-transform: translate3d(1px, -3px, 0);
-    transform: translate3d(1px, -3px, 0); } }
+    -webkit-transform: translate3d(1px, -3px, 0) scale(1);
+    transform: translate3d(1px, -3px, 0) scale(1); } }
 
 @-webkit-keyframes glitch {
   0% {
@@ -607,90 +607,90 @@ h1 {
   animation: blur 21s 3s ease infinite; }
 
 .image--1 {
-  -webkit-animation: shake 56s 15s linear infinite;
-  animation: shake 56s 15s linear infinite; }
+  -webkit-animation: shake 48s 10s linear infinite;
+  animation: shake 48s 10s linear infinite; }
 
 .mask--1 {
-  -webkit-animation: shake 21s 3s linear infinite;
-  animation: shake 21s 3s linear infinite; }
+  -webkit-animation: shake 36s 7s linear infinite;
+  animation: shake 36s 7s linear infinite; }
 
 .image--2 {
-  -webkit-animation: shake 21s 18s linear infinite;
-  animation: shake 21s 18s linear infinite; }
+  -webkit-animation: shake 36s 4s linear infinite;
+  animation: shake 36s 4s linear infinite; }
 
 .mask--2 {
-  -webkit-animation: shake 35s 6s linear infinite;
-  animation: shake 35s 6s linear infinite; }
+  -webkit-animation: shake 52s 7s linear infinite;
+  animation: shake 52s 7s linear infinite; }
 
 .image--3 {
-  -webkit-animation: shake 63s 15s linear infinite;
-  animation: shake 63s 15s linear infinite; }
+  -webkit-animation: shake 49s 11s linear infinite;
+  animation: shake 49s 11s linear infinite; }
 
 .mask--3 {
-  -webkit-animation: shake 42s 27s linear infinite;
-  animation: shake 42s 27s linear infinite; }
+  -webkit-animation: shake 60s 11s linear infinite;
+  animation: shake 60s 11s linear infinite; }
 
 .image--4 {
-  -webkit-animation: shake 70s 18s linear infinite;
-  animation: shake 70s 18s linear infinite; }
+  -webkit-animation: shake 39s 13s linear infinite;
+  animation: shake 39s 13s linear infinite; }
 
 .mask--4 {
-  -webkit-animation: shake 42s 27s linear infinite;
-  animation: shake 42s 27s linear infinite; }
+  -webkit-animation: shake 38s 7s linear infinite;
+  animation: shake 38s 7s linear infinite; }
 
 .image--5 {
-  -webkit-animation: shake 42s 21s linear infinite;
-  animation: shake 42s 21s linear infinite; }
+  -webkit-animation: shake 40s 6s linear infinite;
+  animation: shake 40s 6s linear infinite; }
 
 .mask--5 {
-  -webkit-animation: shake 56s 21s linear infinite;
-  animation: shake 56s 21s linear infinite; }
+  -webkit-animation: shake 40s 12s linear infinite;
+  animation: shake 40s 12s linear infinite; }
 
 .image--6 {
-  -webkit-animation: shake 70s 3s linear infinite;
-  animation: shake 70s 3s linear infinite; }
+  -webkit-animation: shake 50s 4s linear infinite;
+  animation: shake 50s 4s linear infinite; }
 
 .mask--6 {
-  -webkit-animation: shake 70s 12s linear infinite;
-  animation: shake 70s 12s linear infinite; }
+  -webkit-animation: shake 48s 11s linear infinite;
+  animation: shake 48s 11s linear infinite; }
 
 .image--7 {
-  -webkit-animation: shake 56s 15s linear infinite;
-  animation: shake 56s 15s linear infinite; }
+  -webkit-animation: shake 43s 8s linear infinite;
+  animation: shake 43s 8s linear infinite; }
 
 .mask--7 {
-  -webkit-animation: shake 35s 30s linear infinite;
-  animation: shake 35s 30s linear infinite; }
+  -webkit-animation: shake 54s 10s linear infinite;
+  animation: shake 54s 10s linear infinite; }
 
 .image--8 {
-  -webkit-animation: shake 56s 15s linear infinite;
-  animation: shake 56s 15s linear infinite; }
+  -webkit-animation: shake 35s 11s linear infinite;
+  animation: shake 35s 11s linear infinite; }
 
 .mask--8 {
-  -webkit-animation: shake 28s 15s linear infinite;
-  animation: shake 28s 15s linear infinite; }
+  -webkit-animation: shake 51s 13s linear infinite;
+  animation: shake 51s 13s linear infinite; }
 
 .image--9 {
-  -webkit-animation: shake 49s 6s linear infinite;
-  animation: shake 49s 6s linear infinite; }
+  -webkit-animation: shake 56s 9s linear infinite;
+  animation: shake 56s 9s linear infinite; }
 
 .mask--9 {
-  -webkit-animation: shake 14s 6s linear infinite;
-  animation: shake 14s 6s linear infinite; }
+  -webkit-animation: shake 44s 11s linear infinite;
+  animation: shake 44s 11s linear infinite; }
 
 .image--10 {
-  -webkit-animation: shake 42s 18s linear infinite;
-  animation: shake 42s 18s linear infinite; }
+  -webkit-animation: shake 40s 4s linear infinite;
+  animation: shake 40s 4s linear infinite; }
 
 .mask--10 {
-  -webkit-animation: shake 28s 12s linear infinite;
-  animation: shake 28s 12s linear infinite; }
+  -webkit-animation: shake 50s 4s linear infinite;
+  animation: shake 50s 4s linear infinite; }
 
 .text {
   font-size: 1.77778rem;
   line-height: 2rem;
-  -webkit-animation: shake 49s 27s linear infinite;
-  animation: shake 49s 27s linear infinite; }
+  -webkit-animation: shake 52s 7s linear infinite;
+  animation: shake 52s 7s linear infinite; }
 
 .tspan {
   -webkit-animation: glitch 17s infinite;
@@ -714,13 +714,17 @@ h1 {
     -webkit-transform: rotate(0deg) translate3d(500px, 0, 0) rotate(0deg);
     transform: rotate(0deg) translate3d(500px, 0, 0) rotate(0deg); } }
 
-.sunrise {
-  -webkit-animation: sunrise 180s infinite alternate ease-in-out;
-  animation: sunrise 180s infinite alternate ease-in-out; }
+.wiring2-mask {
+  -webkit-transform-origin: top left;
+  transform-origin: top left; }
 
 .sunrise-wrap {
   -webkit-transform: translate3d(-425px, 300px, 0);
   transform: translate3d(-425px, 300px, 0); }
+
+.sunrise {
+  -webkit-animation: sunrise 180s infinite alternate ease-in-out;
+  animation: sunrise 180s infinite alternate ease-in-out; }
 
 
 /*# sourceMappingURL=screen.css.map */
